--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://IamWilliamCao.github.io/William-Cao-Website",
+  "homepage": "https://IamWilliamCao.github.io/my-website",
   "name": "my-website",
   "version": "0.1.0",
   "private": true,
